<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/ChiefGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chief_guest"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/ChiefGuestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chief_guest_names"
            android:layout_below="@+id/ChiefGuest"
            style="@style/names"
            android:paddingBottom="24dp"/>

        <TextView
            android:id="@+id/GuestofHonor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ChiefGuestName"
            android:text="@string/guest_of_honor"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/GuestofHonorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest_of_honor_name"
            android:layout_below="@+id/GuestofHonor"
            style="@style/names"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/Day1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/GuestofHonorName"
            android:text="@string/day1"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/Keynote1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Day1"
            android:text="@string/keynote1_1"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/Keynote1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keynote1_names_1"
            android:layout_below="@+id/Keynote1"
            style="@style/names"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/Keynote2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Keynote1_name"
            android:text="@string/keynote2_1"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/Keynote2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keynote2_names_1"
            android:layout_below="@+id/Keynote2"
            style="@style/names"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/Day2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Keynote2_name"
            android:text="@string/day2"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/Keynote1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Day2"
            android:text="@string/keynote1_1"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/Keynote1_2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keynote1_name_2"
            android:layout_below="@+id/Keynote1_2"
            style="@style/names"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/Keynote2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Keynote1_2_name"
            android:text="@string/keynote2_2"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/Keynote2_2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keynote2_names_2"
            android:layout_below="@+id/Keynote2_2"
            style="@style/names"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/ChiefPatron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Keynote2_2_name"
            android:text="@string/chief_patrons"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/ChiefPatronNames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chief_patrons_names"
            android:layout_below="@+id/ChiefPatron"
            style="@style/names2"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/Patrons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ChiefPatronNames"
            android:text="@string/patrons"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/PatronNames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/patrons_names"
            android:layout_below="@+id/Patrons"
            style="@style/names2"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/Steering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PatronNames"
            android:text="@string/steerig"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/SteeringName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/steerig_name"
            android:layout_below="@+id/Steering"
            style="@style/names2"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/Conveners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SteeringName"
            android:text="@string/coveners"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/Conveners_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/coveners_name"
            android:layout_below="@+id/Conveners"
            style="@style/names2"
            android:paddingBottom="24dp"/>




    </RelativeLayout>
</ScrollView>