<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ContactUs">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/AddressLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddressLine"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:layout_below="@+id/AddressLine"
            android:autoLink="map"
            style="@style/contact_us_matter"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/Website_Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Website_Line"
            android:layout_below="@+id/Address"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/Website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Website"
            android:layout_below="@+id/Website_Line"
            style="@style/contact_us_matter"
            android:autoLink="web"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/ForRegistrationsLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ForRegistrationsLine"
            android:layout_below="@+id/Website"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/ForRegistrations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ForRegistrations"
            android:layout_below="@id/ForRegistrationsLine"
            style="@style/contact_us_matter"
            android:autoLink="email"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/ContactNoLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactNoLine"
            android:layout_below="@+id/ForRegistrations"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/ContactNo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ContactNo1"
            android:layout_below="@+id/ContactNoLine"
            style="@style/contact_us_matter"
            android:autoLink="phone"/>
        <TextView
            android:id="@+id/ContactNo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ContactNo2"
            android:layout_below="@+id/ContactNo1"
            style="@style/contact_us_matter"
            android:autoLink="phone"/>
        <TextView
            android:id="@+id/ContactNo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ContactNo3"
            android:layout_below="@+id/ContactNo2"
            style="@style/contact_us_matter"
            android:autoLink="phone"
            android:paddingBottom="24dp"/>
        <TextView
            android:id="@+id/ForAnyOtherQueries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ForAnyOtherQueries"
            android:layout_below="@+id/ContactNo3"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/sambhaji_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sambhaji_id"
            android:layout_below="@+id/ForAnyOtherQueries"
            style="@style/contact_us_matter"
            android:autoLink="email"/>
        <TextView
            android:id="@+id/nagesh_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nagesh_id"
            android:layout_below="@id/sambhaji_id"
            style="@style/contact_us_matter"
            android:autoLink="email"/>
        <TextView
            android:id="@+id/monica_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monica_id"
            android:layout_below="@+id/nagesh_id"
            style="@style/contact_us_matter"
            android:autoLink="email"/>


    </RelativeLayout>
</ScrollView>