<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdvisoryBoard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/Advisory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Keynote2_2_name"
            android:text="@string/advisory"
            android:paddingBottom="10dp"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/AdvisoryNames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/advisory_names"
            android:layout_below="@+id/Advisory"
            style="@style/names2"
            android:paddingBottom="24dp"/>

        <TextView
            android:id="@+id/Technical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AdvisoryNames"
            android:text="@string/technical"
            android:paddingBottom="10dp"
            style="@style/contact_us_headings"/>
        <TextView
            android:id="@+id/TechnicalNames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/technical_names"
            android:layout_below="@+id/Technical"
            style="@style/names2"
            android:paddingBottom="24dp"/>


    </RelativeLayout>
</ScrollView>